--- a/package.yml
+++ b/package.yml
@@ -7,3 +7,9 @@ requirements:
 - sqlalchemy
 - python-telegram-bot
 - requests
+- bs4 ^0.0.1
+- databind.core ^0.11.0
+- databind.yaml ^0.1.3
+entrypoints:
+  impfi.api.IPlugin:
+  - dachau = impfi.contrib.de.bavaria.dachau:DachauMedPlugin
