--- a/package.yml
+++ b/package.yml
@@ -1,4 +1,4 @@
-name: impfi
+name: impfbot
 version: 0.0.0
 author: Niklas Rosenstein <rosensteinniklas@gmail.com>
 description: Package description here.
@@ -11,5 +11,5 @@ requirements:
 - databind.core ^0.11.0
 - databind.yaml ^0.1.3
 entrypoints:
-  impfi.api.IPlugin:
-  - dachau = impfi.contrib.de.bavaria.dachau:DachauMedPlugin
+  impfbot.api.IPlugin:
+  - dachau = impfbot.contrib.de.bavaria.dachau:DachauMedPlugin
