--- a/package.yml
+++ b/package.yml
@@ -10,6 +10,8 @@ requirements:
 - bs4 ^0.0.1
 - databind.core ^0.11.0
 - databind.yaml ^0.1.3
+test-requirements:
+- sqlalchemy-stubs
 entrypoints:
   impfbot.api.IPlugin:
   - dachau = impfbot.contrib.de.bavaria.dachau:DachauMedPlugin
