--- a/package.yml
+++ b/package.yml
@@ -10,9 +10,10 @@ requirements:
 - bs4 ^0.0.1
 - databind.core ^0.11.0
 - databind.yaml ^0.1.3
-- python-i18n[YAML] ^0.3.9
 test-requirements:
 - sqlalchemy-stubs
+- types-pkg_resources
+- types-cachetools
 entrypoints:
   impfbot.api.IPlugin:
   - dachau = impfbot.contrib.de.bavaria.dachau:DachauMedPlugin
