--- a/package.yml
+++ b/package.yml
@@ -11,10 +11,13 @@ requirements:
 - databind.core ^0.11.0
 - databind.yaml ^0.1.3
 test-requirements:
+- pytest
+dev-requirements:
 - sqlalchemy-stubs
 - types-cachetools
 - types-requests
 - types-pkg_resources
+render-requirements-txt: true
 entrypoints:
   impfbot.api.IPlugin:
   - dachau = impfbot.contrib.de.bavaria.dachau:DachauMedPlugin
