--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-python ^3.5
+python >=3.5.0,<4.0.0
 sqlalchemy
 python-telegram-bot
 requests
-bs4 ^0.0.1
-databind.core ^0.11.0
-databind.yaml ^0.1.3
+bs4 >=0.0.1,<1.0.0
+databind.core >=0.11.0,<1.0.0
+databind.yaml >=0.1.3,<1.0.0
