--- a/package.yml
+++ b/package.yml
@@ -11,6 +11,8 @@ requirements:
 - bs4 ^0.0.1
 - databind.core ^0.11.0
 - databind.yaml ^0.1.3
+- nr.stream ^0.1.2
+- prometheus-client ^0.11.0
 test-requirements:
 - pytest
 dev-requirements:
