--- a/package.yml
+++ b/package.yml
@@ -13,8 +13,9 @@ requirements:
 - databind.yaml ^0.1.3
 - nr.stream ^0.1.2
 - prometheus-client ^0.11.0
-test-requirements:
-- pytest
+test-drivers:
+- type: pytest
+- type: mypy
 dev-requirements:
 - sqlalchemy-stubs
 - types-cachetools
